Fixed footer spacing

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -736,7 +736,7 @@
     @include media("<=phone") {
       height: unset;
       flex-direction: column;
-      padding: 72px 0 96px;
+      padding: 16px;
     }
 
     &__links {
@@ -747,7 +747,7 @@
       @include media("<=phone") {
         flex-direction: row;
         column-gap: 32px;
-        margin: 60px 0;
+        margin: 16px 0;
       }
 
       &__link {
